# Elerrina

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  bmp.c  bmp.h  img.c  img.h  main.c  main.h  qoi.c  qoi.h  util.h
test/: test1.qoi  test1.txt  test2.qoi  test2.txt
